--- a/public/certifications.html
+++ b/public/certifications.html
@@ -22,6 +22,17 @@
     </div>
   </nav>
 
+  <!-- Mobile Navigation -->
+  <div class="mobile-nav">
+    <ul class="mobile-nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="journey.html">Journey</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="certifications.html">Certifications</a></li>
+    </ul>
+  </div>
+
   <header class="page-header">
     <div class="page-header-content">
       <div class="section-tag">
