--- a/public/certifications.html
+++ b/public/certifications.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,7 +23,7 @@
       flex-direction: column;
       min-height: 320px;
       overflow: hidden;
-      box-shadow: 0 1px 4px rgba(0,0,0,.05);
+      box-shadow: 0 1px 4px rgba(0, 0, 0, .05);
     }
 
     .cert-logo {
@@ -89,180 +90,194 @@
 
 <body>
 
-<!-- NAVBAR -->
-<nav class="navbar">
-  <div class="nav-container">
-    <a href="index.html" class="nav-logo">AM.</a>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="journey.html">Journey</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="certifications.html" class="active">Certifications</a></li>
-    </ul>
-  </div>
-</nav>
-
-<!-- HEADER -->
-<header class="page-header">
-  <div class="page-header-content">
-    <div class="section-tag">
-      <span class="section-tag-line"></span>
-      <span>Certifications</span>
+  <!-- NAVBAR -->
+  <nav class="navbar">
+    <div class="nav-container">
+      <a href="index.html" class="nav-logo">AM.</a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="journey.html">Journey</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="certifications.html" class="active">Certifications</a></li>
+      </ul>
     </div>
-    <h1>Certifications</h1>
-    <p>Professional credentials and technical achievements</p>
-  </div>
-</header>
+  </nav>
 
-<!-- CERTIFICATIONS -->
-<section class="certifications-section">
-  <div class="section-container">
-    <div class="certifications-grid">
-
-      <!-- Internship -->
-      <article class="cert-card">
-        <div class="cert-logo"><div class="pdf-icon">📄</div></div>
-        <div class="cert-content">
-          <h3 class="cert-title">Internship Completion Certificate</h3>
-          <div class="cert-meta">Company / Organization • 2025</div>
-          <p class="cert-desc">Certificate of successful internship completion.</p>
-          <div class="cert-actions">
-            <a href="certificate/Internship_Certificate - Amar_Adinath_Dhadbale.pdf" target="_blank">View PDF</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Cisco IoT -->
-      <article class="cert-card">
-        <div class="cert-logo"><div class="pdf-icon">📄</div></div>
-        <div class="cert-content">
-          <h3 class="cert-title">Cisco Internet of Things (IoT)</h3>
-          <div class="cert-meta">Cisco • 2024</div>
-          <p class="cert-desc">IoT concepts, devices, networking and applications.</p>
-          <div class="cert-actions">
-            <a href="certificate/CISCO IOT.pdf" target="_blank">View PDF</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Full Stack Image -->
-      <article class="cert-card">
-        <div class="cert-logo">
-          <img src="certificate/fullstack certificate.jpg" alt="Full Stack Bootcamp">
-        </div>
-        <div class="cert-content">
-          <h3 class="cert-title">Full Stack Web Development Bootcamp</h3>
-          <div class="cert-meta">Training Institute • 2024</div>
-          <p class="cert-desc">HTML, CSS, JavaScript, frontend and backend development.</p>
-          <div class="cert-actions">
-            <a href="certificate/fullstack certificate.jpg" target="_blank">View Certificate</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Full Stack Training -->
-      <article class="cert-card">
-        <div class="cert-logo">
-          <img src="certificate/Fullstack bootcamp.jpeg" alt="Full Stack Training">
-        </div>
-        <div class="cert-content">
-          <h3 class="cert-title">Full Stack Development Training</h3>
-          <div class="cert-meta">Training Institute • 2024</div>
-          <p class="cert-desc">Frontend, backend and database integration.</p>
-          <div class="cert-actions">
-            <a href="certificate/Fullstack bootcamp.jpeg" target="_blank">View Certificate</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- React GFG -->
-      <article class="cert-card">
-        <div class="cert-logo"><div class="pdf-icon">📄</div></div>
-        <div class="cert-content">
-          <h3 class="cert-title">React Development</h3>
-          <div class="cert-meta">GeeksforGeeks • 2024</div>
-          <p class="cert-desc">Components, hooks and state management.</p>
-          <div class="cert-actions">
-            <a href="certificate/react geeks for geeks.pdf" target="_blank">View PDF</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- React Basic -->
-      <article class="cert-card">
-        <div class="cert-logo"><div class="pdf-icon">📄</div></div>
-        <div class="cert-content">
-          <h3 class="cert-title">React Basics</h3>
-          <div class="cert-meta">Online Platform • 2024</div>
-          <p class="cert-desc">Introductory React and component architecture.</p>
-          <div class="cert-actions">
-            <a href="certificate/react_basic certificate (1).pdf" target="_blank">View PDF</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- AWS -->
-      <article class="cert-card">
-        <div class="cert-logo"><div class="pdf-icon">📄</div></div>
-        <div class="cert-content">
-          <h3 class="cert-title">AWS Cloud Certification</h3>
-          <div class="cert-meta">Amazon Web Services • 2024</div>
-          <p class="cert-desc">AWS cloud fundamentals and services.</p>
-          <div class="cert-actions">
-            <a href="certificate/aws.pdf" target="_blank">View PDF</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- TensorFlow -->
-      <article class="cert-card">
-        <div class="cert-logo"><div class="pdf-icon">📄</div></div>
-        <div class="cert-content">
-          <h3 class="cert-title">TensorFlow Certification</h3>
-          <div class="cert-meta">Google / TensorFlow • 2024</div>
-          <p class="cert-desc">Machine learning concepts using TensorFlow.</p>
-          <div class="cert-actions">
-            <a href="certificate/tensorflow.pdf" target="_blank">View PDF</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Embedded -->
-      <article class="cert-card">
-        <div class="cert-logo"><div class="pdf-icon">📄</div></div>
-        <div class="cert-content">
-          <h3 class="cert-title">Embedded Systems</h3>
-          <div class="cert-meta">Training Institute • 2024</div>
-          <p class="cert-desc">Microcontrollers and hardware interfacing.</p>
-          <div class="cert-actions">
-            <a href="certificate/embeded.pdf" target="_blank">View PDF</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Automation -->
-      <article class="cert-card">
-        <div class="cert-logo"><div class="pdf-icon">📄</div></div>
-        <div class="cert-content">
-          <h3 class="cert-title">Automation Testing</h3>
-          <div class="cert-meta">Training Institute • 2024</div>
-          <p class="cert-desc">Software testing and automation fundamentals.</p>
-          <div class="cert-actions">
-            <a href="certificate/Automation testing.pdf" target="_blank">View PDF</a>
-          </div>
-        </div>
-      </article>
-
+  <!-- HEADER -->
+  <header class="page-header">
+    <div class="page-header-content">
+      <div class="section-tag">
+        <span class="section-tag-line"></span>
+        <span>Certifications</span>
+      </div>
+      <h1>Certifications</h1>
+      <p>Professional credentials and technical achievements</p>
     </div>
-  </div>
-</section>
+  </header>
 
-<!-- FOOTER -->
-<div id="footer"></div>
+  <!-- CERTIFICATIONS -->
+  <section class="certifications-section">
+    <div class="section-container">
+      <div class="certifications-grid">
 
-<script src="js/main.js"></script>
-<script src="footer.js"></script>
+        <!-- Internship -->
+        <article class="cert-card">
+          <div class="cert-logo"> <img src="certificate/internship.png" alt=""></div>
+          <div class="cert-content">
+            <h3 class="cert-title">Internship Completion Certificate</h3>
+            <div class="cert-meta">Company / Organization • 2025</div>
+            <p class="cert-desc">Certificate of successful internship completion.</p>
+            <div class="cert-actions">
+              <a href="certificate/Internship_Certificate - Amar_Adinath_Dhadbale.pdf" target="_blank">View PDF</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Cisco IoT -->
+        <article class="cert-card">
+          <div class="cert-logo"><img src="certificate/cisco.png" alt="Cisco IoT Certificate"></div>
+          <div class="cert-content">
+            <h3 class="cert-title">Cisco Internet of Things (IoT)</h3>
+            <div class="cert-meta">Cisco • 2024</div>
+            <p class="cert-desc">IoT concepts, devices, networking and applications.</p>
+            <div class="cert-actions">
+              <a href="certificate/CISCO IOT.pdf" target="_blank">View PDF</a>
+            </div>
+          </div>
+        </article>
+
+
+        <!-- Full Stack Training -->
+        <article class="cert-card">
+          <div class="cert-logo">
+            <img src="certificate/Fullstack bootcamp.jpeg" alt="Full Stack Training">
+          </div>
+          <div class="cert-content">
+            <h3 class="cert-title">Full Stack Development Training</h3>
+            <div class="cert-meta">Training Institute • 2024</div>
+            <p class="cert-desc">Frontend, backend and database integration.</p>
+            <div class="cert-actions">
+              <a href="certificate/Fullstack bootcamp.jpeg" target="_blank">View Certificate</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- React GFG -->
+        <article class="cert-card">
+          <div class="cert-logo"><img src="certificate/GFGreact.png" alt="GeeksforGeeks React Certificate"></div>
+          <div class="cert-content">
+            <h3 class="cert-title">React Development</h3>
+            <div class="cert-meta">GeeksforGeeks • 2024</div>
+            <p class="cert-desc">Components, hooks and state management.</p>
+            <div class="cert-actions">
+              <a href="certificate/react geeks for geeks.pdf" target="_blank">View PDF</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- React Basic -->
+        <article class="cert-card">
+          <div class="cert-logo"><img src="certificate/hackerrankreact.png" alt="HackerRank React Certificate"></div>
+          <div class="cert-content">
+            <h3 class="cert-title">React Basics</h3>
+            <div class="cert-meta">Online Platform • 2024</div>
+            <p class="cert-desc">Introductory React and component architecture.</p>
+            <div class="cert-actions">
+              <a href="certificate/react_basic certificate (1).pdf" target="_blank">View PDF</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- AWS -->
+        <article class="cert-card">
+          <div class="cert-logo"><img src="certificate/aws.png" alt="AWS Cloud Certification"></div>
+          <div class="cert-content">
+            <h3 class="cert-title">AWS Cloud Certification</h3>
+            <div class="cert-meta">Amazon Web Services • 2024</div>
+            <p class="cert-desc">AWS cloud fundamentals and services.</p>
+            <div class="cert-actions">
+              <a href="certificate/aws.pdf" target="_blank">View PDF</a>
+            </div>
+          </div>
+        </article>
+
+         <article class="cert-card">
+          <div class="cert-logo"><img src="certificate/wisdom spout.jpeg" alt="Wisdom Spout Certificate"></div>
+          <div class="cert-content">
+            <h3 class="cert-title">30 days DSA Challenge</h3>
+            <div class="cert-meta">Wisdom Spout • 2024</div>
+            <p class="cert-desc">Data Structures and Algorithms fundamentals.</p>
+            <div class="cert-actions">
+              <a href="certificate/wisdom spout.jpeg" target="_blank">View PDF</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- TensorFlow -->
+        <article class="cert-card">
+          <div class="cert-logo"><img src="certificate/tenserfloe.png" alt="TensorFlow Certification"></div>
+          <div class="cert-content">
+            <h3 class="cert-title">TensorFlow Certification</h3>
+            <div class="cert-meta">Google / TensorFlow • 2024</div>
+            <p class="cert-desc">Machine learning concepts using TensorFlow.</p>
+            <div class="cert-actions">
+              <a href="certificate/tensorflow.pdf" target="_blank">View PDF</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Embedded -->
+        <article class="cert-card">
+          <div class="cert-logo"><img src="certificate/embeded.png" alt="Embedded Systems Certificate"></div>
+          <div class="cert-content">
+            <h3 class="cert-title">Embedded Systems</h3>
+            <div class="cert-meta">Training Institute • 2024</div>
+            <p class="cert-desc">Microcontrollers and hardware interfacing.</p>
+            <div class="cert-actions">
+              <a href="certificate/embeded.pdf" target="_blank">View PDF</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Automation -->
+        <article class="cert-card">
+          <div class="cert-logo"><img src="certificate/Automation.png" alt="Automation Testing Certificate"></div>
+          <div class="cert-content">
+            <h3 class="cert-title">Automation Testing</h3>
+            <div class="cert-meta">Training Institute • 2024</div>
+            <p class="cert-desc">Software testing and automation fundamentals.</p>
+            <div class="cert-actions">
+              <a href="certificate/Automation testing.pdf" target="_blank">View PDF</a>
+            </div>
+          </div>
+        </article>
+
+        <article class="cert-card">
+          <div class="cert-logo"><img src="certificate/deolite.png" alt="Deolite Certificate"></div>
+          <div class="cert-content">
+            <h3 class="cert-title">Deolite Certificate</h3>
+            <div class="cert-meta">Cyber Job Simulation</div>
+            <p class="cert-desc">Cyber Security fundamentals.</p>
+            <div class="cert-actions">
+              <a href="certificate/deolite.pdf" target="_blank">View PDF</a>
+            </div>
+          </div>
+        </article>
+
+        
+
+
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <div id="footer"></div>
+
+  <script src="js/main.js"></script>
+  <script src="footer.js"></script>
 
 </body>
+
 </html>
