--- a/public/projects.html
+++ b/public/projects.html
@@ -6,16 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Explore my portfolio of web development and design projects.">
   <meta name="keywords" content="portfolio, projects, web development, design, case studies">
-  <meta name="author" content="Alex Morgan">
+  <meta name="author" content="Amar Dhadbale">
   <meta name="theme-color" content="#FDF6F0">
 
-  <title>Projects | Alex Morgan</title>
+  <title>Projects | AMAR DHADBALE</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="icon.svg">
+    <link rel="icon" type="image/x-icon" href="/images/profile/Screenshot 2026-02-02 235458.ico">
 
   <!-- Stylesheet -->
   <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -35,8 +38,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="projects.html" class="active">Projects</a></li>
         <li><a href="journey.html">Journey</a></li>
-        <li><a href="contact.html">Contact</a></li>
         <li><a href="certifications.html">Certifications</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 
       <div class="menu-toggle">
@@ -53,8 +56,8 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="journey.html">Journey</a></li>
-      <li><a href="contact.html">Contact</a></li>
       <li><a href="certifications.html">Certifications</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
 
