--- a/public/footer.html
+++ b/public/footer.html
@@ -157,8 +157,8 @@
 
         <!-- Brand -->
         <div class="footer-brand">
-          <img data-img="brand-logo" alt="Brand Logo" />
-          <h3 data-text="brand-name"></h3>
+          <img data-img="brand-logo" width="20px" height="20px" style="border-radius: 50%;" alt="Brand Logo" />
+          <h3 data-text="brand-name">AD</h3>
           <p data-text="brand-tagline"></p>
 
           <div class="footer-social">
