--- a/public/journey.html
+++ b/public/journey.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="description" content="Learn about my journey as a creative developer and designer.">
   <meta name="keywords" content="about, journey, developer, designer, experience, career">
   <meta name="author" content="Amar Dhadbale">
